# robotics-gui

./: .gitattributes  .gitignore  CMakeLists.txt  package.xml  plugin.xml  requirments.txt  setup.py
.qt_for_python/uic/: arm.py  motor.py  pds.py  pds_ui.py
controller/: package.xml  setup.py
controller/resource/: PluginUi.ui
controller/scripts/: controller
resource/: arm.ui  motor.ui  pds.ui  science.ui
scripts/: arm.py  arm_ui.py  controller  controller.py  controller_ui.py  controller_ui_file.py  helpers.py  logger.py  pds.py  script  tables.py  useful.py
scripts/pages/: arm.py  autonomy.py  cams.py  controller.py  pds.py  science.py  wheel.py
scripts/ui/: arm_ui.py  autonomy_ui.py  cams_ui.py  controller_ui.py  pds_ui.py  science_ui.py  wheel_ui.py
scripts/utils/: helpers.py  logger.py  tables.py
src/controller/resource/: PluginUi.ui
src/controller/scripts/: controller  controller_ui_file.py
