<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>1.0.0</version>
  <description>Space Concordia Robotics Rover GUI</description>

  <maintainer email="mohamadali.taha@spaceconcordia.ca">Mohamad Ali Taha</maintainer>

  <license>TODO</license>
  
  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>  
  <depend>std_msgs</depend>  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
